--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@ $(".toggle").on("click", function() {
 					<li class="logo"><a href="index.html">K'z Detailing</a></li>
 					<li class="item"><a href="boat.html">Marine</a></li>
 					<li class="item"><a href="auto.html">Automotive</a></li>
-					<li class="item"><a href="Social.html">Social</a></li>
+					<li class="item"><a href="social.html">Social</a></li>
 					<li class="item"><a href="about.html">About</a></li>
 					</li>
 					<li class="item button"><a href="contac.html">Contact</a></li>
@@ -68,17 +68,15 @@ $(".toggle").on("click", function() {
 
 
 
-	<div class="container-contact100">
+<!--	<div class="container-contact100">
 		<div class="wrap-contact100">
-			<form class="contact100-form validate-form">
+			<form class="contact100-form validate-form"> -->
 				<span class="contact100-form-title">
 					About Us
 				</span>
 
-				<div class="wrap-input100 validate-input" data-validate="Name is required">
+				<div class="wrap-input100 validate-input">
 					<span class="label-input100">We offer high quality detailing services specially tailored to your needs. Whether you are a daily commuter to an extreme high-performance hobbyist, we make it our priority to detail your vehicle with perfection in mind. K'z detailing has done detailing in Las Vegas, Nevada and Oahu, Hawaii.</span>
-	<!--				<input class="input100" type="text" name="name" placeholder="Enter your name"> -->
-					<span class="focus-input100"></span>
 				</div>
 
 
