--- a/social.html
+++ b/social.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Automotive</title>
+    <title>Social Media</title>
     <link rel="stylesheet" href="navbar2.css">
     <link rel="stylesheet" href="socia.css">
     <script
