--- a/contac.html
+++ b/contac.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Contact</title>
+	<title>Contact V4</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
@@ -52,6 +52,7 @@ $(".toggle").on("click", function() {
 					<li class="logo"><a href="Index.html">K'z Detailing</a></li>
 					<li class="item"><a href="boat.html">Marine</a></li>
 					<li class="item"><a href="Auto.html">Automotive</a></li>
+					<li class="item"><a href="social.html">Social</a></li>
 					<li class="item"><a href="about.html">About</a></li>
 					</li>
 					<li class="item button"><a href="Contac.html">Contact</a></li>
@@ -80,13 +81,13 @@ $(".toggle").on("click", function() {
 				</div>
 
 				<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-				<a href="mailto:kzdetail@gmail.com" span class="label-input100">Email : kzdetail@gmail.com</span>
+	<a href="mailto:kzdetail@gmail.com"	span class="label-input100">Email : kzdetailinghawaii@gmail.com</span></a>
 				<!--	<input class="input100" type="text" name="email" placeholder="Enter your email addess">
 					<span class="focus-input100"></span> -->
 				</div>
 
 				<div class="wrap-input100 input100-select">
-		<a href="tel:+18082859645"	span class="label-input100">Call or Text (808) 285-9645</span>
+			<a href='tel:+18082859645'	span class="label-input100">Call or Text (808) 285-9645</span></a>
 				<!--	<div>
 						<select class="selection-2" name="service">
 							<option>Choose Services</option>
@@ -111,13 +112,11 @@ $(".toggle").on("click", function() {
 					</div>
 					<span class="focus-input100"></span>
 				</div>
-
 				<div class="wrap-input100 validate-input" data-validate = "Message is required">
 					<span class="label-input100">Message</span>
 					<textarea class="input100" name="message" placeholder="Your message here..."></textarea>
 					<span class="focus-input100"></span>
 				</div>
-
 				<div class="container-contact100-form-btn">
 					<div class="wrap-contact100-form-btn">
 						<div class="contact100-form-bgbtn"></div>
