--- a/about.html
+++ b/about.html
@@ -52,10 +52,10 @@ $(".toggle").on("click", function() {
 			<ul class="menu">
 					<li class="logo"><a href="Index.html">K'z Detailing</a></li>
 					<li class="item"><a href="boat.html">Marine</a></li>
-					<li class="item"><a href="Auto.html">Automotive</a></li>
+					<li class="item"><a href="auto.html">Automotive</a></li>
 					<li class="item"><a href="about.html">About</a></li>
 					</li>
-					<li class="item button"><a href="Contac.html">Contact</a></li>
+					<li class="item button"><a href="contac.html">Contact</a></li>
 					<li class="toggle"><span class="bars"></span></li>
 			</ul>
 	</nav>
