--- a/contac.html
+++ b/contac.html
@@ -51,7 +51,7 @@ $(".toggle").on("click", function() {
 			<ul class="menu">
 					<li class="logo"><a href="Index.html">K'z Detailing</a></li>
 					<li class="item"><a href="boat.html">Marine</a></li>
-					<li class="item"><a href="Auto.html">Automotive</a></li>
+					<li class="item"><a href="auto.html">Automotive</a></li>
 					<li class="item"><a href="social.html">Social</a></li>
 					<li class="item"><a href="about.html">About</a></li>
 					</li>
