--- a/about.html
+++ b/about.html
@@ -53,6 +53,7 @@ $(".toggle").on("click", function() {
 					<li class="logo"><a href="Index.html">K'z Detailing</a></li>
 					<li class="item"><a href="boat.html">Marine</a></li>
 					<li class="item"><a href="auto.html">Automotive</a></li>
+				<li class="item"><a href="social.html">Social</a></li>
 					<li class="item"><a href="about.html">About</a></li>
 					</li>
 					<li class="item button"><a href="contac.html">Contact</a></li>
