--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@ $(".toggle").on("click", function() {
 
 	<nav>
 			<ul class="menu">
-					<li class="logo"><a href="Index.html">K'z Detailing</a></li>
+					<li class="logo"><a href="index.html">K'z Detailing</a></li>
 					<li class="item"><a href="boat.html">Marine</a></li>
 					<li class="item"><a href="auto.html">Automotive</a></li>
 				<li class="item"><a href="social.html">Social</a></li>
