--- a/contac.html
+++ b/contac.html
@@ -55,7 +55,7 @@ $(".toggle").on("click", function() {
 					<li class="item"><a href="social.html">Social</a></li>
 					<li class="item"><a href="about.html">About</a></li>
 					</li>
-					<li class="item button"><a href="Contac.html">Contact</a></li>
+					<li class="item button"><a href="contac.html">Contact</a></li>
 					<li class="toggle"><span class="bars"></span></li>
 			</ul>
 	</nav>
