--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <!-- basic.html -->
   <title>Home</title>
-  <meta charset = "UTF-8" />
+  <meta charset = "UTF-8" (max-width: /*your desired viewport*/) />
 <link rel="stylesheet" href="stylesheet.css">
 </head>
 
